# todo-app-backend

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: code-style-check.yml
docker/python/: Dockerfile
src/todo_app/: .env.test  alembic.ini  main.py
src/todo_app/api/: __init__.py
src/todo_app/api/v1/: __init__.py  healthcheck.py  money_flows.py
src/todo_app/core/: database.py
src/todo_app/exceptions/: business_error_exception.py
src/todo_app/handlers/: server_exception_handler.py
src/todo_app/loggers/: custom_logger.py
src/todo_app/logic/calculate/: calculate_datetime.py
src/todo_app/migrations/: env.py
src/todo_app/migrations/versions/: 2493b19c62a2_create_tables.py  263dc2b5892e_add_kind_column_to_money_flows.py
src/todo_app/models/db/: __init__.py  base.py  money_flows.py
src/todo_app/models/request/v1/: money_flows.py
src/todo_app/models/response/v1/: money_flows.py
src/todo_app/repositories/: money_flows.py
tests/api/: conftest.py
tests/api/v1/: test_healthcheck.py  test_money_flows.py
tests/logic/calculate/: test_calculate_datetime.py
